# ai-spike-intelligent-monitoring

./: .gitignore  .ruff.toml  README.md  experiment-writeup.md  pyproject.toml
notebooks/: .env.example  feed-listeners.ipynb
notebooks/data/: 2026-02-09-bbc-news-rss.xml
