[project]
name = "ai-spike-intelligent-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "ipykernel==7.1.0",
    "numpy>=2.4.2",
    "openai>=2.18.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.56.0",
    "python-dotenv==1.2.1",
    "ruff==0.14.13",
    "taskipy==1.14.1",
]

[tool.taskipy.tasks]
lint = "uv run ruff format . --check && uv run ruff check ."
create-kernel = "ipython kernel install --user --env VIRTUAL_ENV $(pwd)/.venv --name=ai-spike-intelligent-monitoring"
